updating the timer

--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ h1 {
 
 }
 P {
-  font-size: 25px;
   line-height: 1.28;
   font-family: 'nyt-cheltenham',Georgia,sans-serif;
   font-size: 23px;
@@ -160,6 +159,19 @@ span.period-counter.forth{
 .card:hover {
   -webkit-box-shadow: 0 0 15px rgba(0,0,0,.3);
   box-shadow: 0 0 15px rgba(0,0,0,.3);
+}
+#gameOver {
+  visibility: hidden;
+}
+.playAgainButton {
+  display: inline;
+  padding: 10px;
+  background-color: #4d4d4d;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  cursor: pointer;
 }
 
 @keyframes show {
