--- a/style.css
+++ b/style.css
@@ -160,9 +160,6 @@ span.period-counter.forth{
   -webkit-box-shadow: 0 0 15px rgba(0,0,0,.3);
   box-shadow: 0 0 15px rgba(0,0,0,.3);
 }
-/* #gameOver {
-  visibility: hidden;
-} */
 .playAgainButton {
   display: inline;
   padding: 10px;
@@ -207,6 +204,44 @@ main {
 body {
   margin:0;
   -webkit-font-smoothing: antialiased;
+}
+footer {
+  background-color: #000;
+  clear: both;
+  color: #c7c7c7;
+  font-size: 14px;
+  font-weight: 400;
+  height: 100px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+footer .logo {
+  fill: #c7c7c7;
+  padding: 30px;
+  float: left;
+}
+.footer-terms {
+  float: right;
+  display: inline;
+  list-style: none;
+  width: 40%;
+  padding: 30px 0;
+}
+.footer-terms li {
+  display: inline;
+  float: left;
+  padding: 0 20px;
+  border-right: solid 1px;
+  text-align: right;
+}
+.footer-terms li.last {
+  border-right: none;
+}
+.footer-terms a {
+  color: #c7c7c7;
+  text-decoration: none;
+  font-family: 'nyt-franklin-500',Arial,sans-serif;
 }
 .hide {
   visibility: hidden;
