--- a/style.css
+++ b/style.css
@@ -106,17 +106,17 @@ span.period-counter {
 }
  
 span.period-counter.first {
-  animation-duration: 4s;
+  animation-duration: 2s;
 }
 
 span.period-counter.second{
-  animation-duration: 6s;
+  animation-duration: 4s;
 }
 span.period-counter.third{
-  animation-duration: 8s;
+  animation-duration: 6s;
 }
 span.period-counter.forth{
-  animation-duration: 10s;
+  animation-duration: 8s;
 }
 .timer {
   float: right;
@@ -125,7 +125,7 @@ span.period-counter.forth{
   animation-timing-function: ease-in;
 	-moz-animation-timing-function: ease-in;
 	-webkit-animation-timing-function: ease-in;
-  animation-duration: 10s;
+  animation-duration: 5s;
 }
 .cards-wrapper {
   margin: 2em 2em 0 2em;
@@ -174,14 +174,14 @@ span.period-counter.forth{
   -webkit-box-shadow: 0 0 15px rgba(0,0,0,.3);
   box-shadow: 0 0 15px rgba(0,0,0,.3);
 }
+#gameOver {
+  text-align: center;
+}
 .playAgainButton {
   display: inline;
   padding: 10px;
   background-color: #4d4d4d;
   color: #fff;
-  position: absolute;
-  top: 50%;
-  right: 50%;
   cursor: pointer;
 }
 
@@ -242,6 +242,7 @@ footer .logo {
   list-style: none;
   width: 40%;
   padding: 30px 0;
+  margin: 0;
 }
 .footer-terms li {
   display: inline;
